# RTAB-Map-Orthophoto

./: .gitignore  README.md  RUN_ALL.sh  auto_exposure_fix.sh  record_bag.sh  replay_bag.sh  rtab_config.ini  rtabmapGUI.ini  run_camera.sh  run_imu_filter.sh  run_mosaicer.sh  run_multicam_mapping.sh  run_rtabmap.sh
DEM/: CMakeLists.txt  ply_to_dem  ply_to_dem.cpp
configs/: Default.json  camera_config.json  camera_config_autoexp.json  config_docu.ini  default_config.ini  rtab_config.ini  rtab_multi.ini  rtabmapGUI.ini
mosaicing_pkg/: CMakeLists.txt  package.xml
mosaicing_pkg/launch/: mosaicer.launch.py  multicam.launch.py
mosaicing_pkg/launch/config/: slam_D455x2_config.rviz
mosaicing_pkg/src/: mosaicing_node.cpp  mosaicing_tools.cpp  mosaicing_tools.h
ply_dem/: CMakeLists.txt  afterInterpAndNorm.txt  data.txt  indices.txt  main.cpp  mosaicing_tools.cpp  mosaicing_tools.h
