<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mosaicing_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vanja1708@gmail.com">vanja</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>rtabmap_conversions</build_depend>
  <build_depend>rtabmap_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rtabmap_conversions</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
